Add countdown containers

--- a/index.html
+++ b/index.html
@@ -9,6 +9,25 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <h1>Vingt</h1>
+
+    <div class="countdown-container">
+        <div class="days-container time-text">
+            <p class="num-text" id="days">0</p>
+            <span>days</span>
+        </div>
+        <div class="hours-container time-text">
+            <p class="num-text" id="hours">0</p>
+            <span>hours</span>
+        </div>
+        <div class="minutes-container time-text">
+            <p class="num-text" id="minutes">0</p>
+            <span>minutes</span>
+        </div>
+        <div class="seconds-container time-text">
+            <p class="num-text" id="seconds">0</p>
+            <span>seconds</span>
+        </div>
+    </div>
 </body>
 </html>
